added home page

--- a/header.html
+++ b/header.html
@@ -16,19 +16,18 @@
     <style></style>
   </head>
   <body>
-    <div>
-      <div class="header">
+    <div class="container">
+      <header class="header">
         <div class="top">
-          <div id="logo">
+          <figure id="logo">
             <!-- logo -->
             <img
               src="images/logo.png"
               alt="logo"
-              width="150px"
-              ,
+              width="200px"
               height="70px"
             />
-          </div>
+          </figure>
 
           <div id="searchdiv">
             <!-- search bar -->
@@ -40,11 +39,6 @@
             />
           </div>
 
-          <div id="selectordiv">
-            <!-- selector -->
-            <label for="selectordiv">juanis kitchen-ID0001</label>
-          </div>
-
           <div id="iconsdiv">
             <!-- icons -->
             <i class="fa fa-bell" style="font-size: 24px"></i>
@@ -54,7 +48,7 @@
         </div>
         <!-- Top Close -->
 
-        <div id="menu">
+        <nav id="menu">
           <!-- category -->
           <div id="category">
             <ul id="catlist">
@@ -68,8 +62,8 @@
             <a href="#" id="neworder">NEW ORDER</a>
             <!-- <input type="button" name="neworder" id="neworder" value="NEW ORDER"> -->
           </div>
-        </div>
-      </div>
+        </nav>
+      </header>
     </div>
   </body>
 </html>
