section links added

--- a/project.html
+++ b/project.html
@@ -27,7 +27,7 @@
 
 
       <div id="iconsdiv bg-success ">
-        <a href=""><img src="images/log-in.svg" alt="icon" width="40" height="20" class=""></a>
+        <a href="boot3.html"><img src="images/log-in.svg" alt="icon" width="40" height="20" class=""></a>
         <a href=""><img src="images/bell.svg" alt="icon" width="40" height="20" class=""></a>
         <a href=""><img src="images/shopping-cart.svg" alt="icon" width="40" height="20" class=""></a>
 
@@ -40,10 +40,10 @@
 
     <div class="container d-flex justify-content-between align-items-center">
       <ul id="catlist" class="mt-2 ">
-        <li><a href="#">TOP CATEGORY</a></li>
-        <li><a href="#">RECOMMENDATION</a></li>
-        <li><a href="#">NEW ITEMS</a></li>
-        <li><a href="#">ITEM LEFT</a></li>
+        <li><a href="#recommend">RECOMMENDATION</a></li>
+        <li><a href="#topcat">TOP CATEGORY</a></li>
+        <li><a href="#newitem">NEW ITEMS</a></li>
+        <li><a href="#itemleft">ITEM LEFT</a></li>
       </ul>
   
       <div id="orderdiv " class="">
@@ -236,7 +236,7 @@
     </div>
   </div>
 
-  <div class="container mt-5">
+  <div class="container mt-5" id="recommend">
     <h2 class="text">Recommend for You</h2>
     <div class="row mt-4">
       <!-- Product 1 -->
@@ -342,7 +342,7 @@
     </div>
   </div>
 
-  <div class="container mt-5">
+  <div class="container mt-5" id="topcat">
     <h2 class="text">Top Category</h2>
     <div class="row mt-4">
       <!-- Product 1 -->
@@ -448,7 +448,7 @@
     </div>
   </div>
 
-  <div class="container mt-5">
+  <div class="container mt-5" id="newitem">
     <h2 class="text">New Items</h2>
     <div class="row mt-4">
       <!-- Product 1 -->
@@ -554,8 +554,7 @@
     </div>
   </div>
 
-
-  <div class="container mt-5">
+  <div class="container mt-5" id="itemleft">
     <h2 class="text">Buy Before they go off the shelf </h2>
     <div class="row mt-4">
       <!-- Product 1 -->
@@ -779,31 +778,31 @@
       <div class="items item2 head">OUR SERVICES</div>
       <div class="items item3 head">CUSTOMER SUPPORT</div>
       <div class="items item4 head">POLICY & TERMS</div>
-      <div class="items item5 head">FOLLOW US</div>
+      <div class="items item5 head">SIGN UP</div>
 
       <div class="items item6 itm">About Us</div>
-      <div class="items item7 itm">7</div>
-      <div class="items item8 itm">8</div>
-      <div class="items item9 itm">9</div>
-      <div class="items item10 itm">10</div>
+      <div class="items item7 itm">MenuMax</div>
+      <div class="items item8 itm">Sales Rep</div>
+      <div class="items item9 itm">License Agreement</div>
+      <div class="items item10 itm">Register</div>
 
       <div class="items item11 itm">Our Brands</div>
-      <div class="items item12 itm">12</div>
-      <div class="items item13 itm">13</div>
-      <div class="items item14 itm">14</div>
-      <div class="items item15 itm">15</div>
+      <div class="items item12 itm">HOST Services</div>
+      <div class="items item13 itm">Help Center</div>
+      <div class="items item14 itm"></div>
+      <div class="items item15 itm"></div>
 
       <div class="items item16 itm">News Feed</div>
-      <div class="items item17 itm">17</div>
-      <div class="items item18 itm">18</div>
-      <div class="items item19 itm">19</div>
-      <div class="items item20 itm">20</div>
+      <div class="items item17 itm">Culinary Resource Team</div>
+      <div class="items item18 itm">Feedback</div>
+      <div class="items item19 itm"></div>
+      <div class="items item20 itm"></div>
 
       <div class="items item21 itm">Eat Local Eat Often</div>
-      <div class="items item22 itm">22</div>
-      <div class="items item23 itm">23</div>
-      <div class="items item24 itm">24</div>
-      <div class="items item25 itm">25</div>
+      <div class="items item22 itm">Newsletter</div>
+      <div class="items item23 itm"></div>
+      <div class="items item24 itm"></div>
+      <div class="items item25 itm"></div>
 
   </div>
   <div class="footer-copyright">
