new images added in carousel

--- a/project.html
+++ b/project.html
@@ -36,6 +36,8 @@
 
     </nav>
   </div>
+
+
   <nav class="container-fluid mt-2  " id="menu">
 
     <div class="container d-flex justify-content-between align-items-center">
@@ -57,13 +59,13 @@
   <div id="carouselExampleAutoplaying" class="carousel slide container mt-2" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active blo_img">
-        <img src="images/banner1.jpg" class="d-block  car_img" alt="...">
+        <img src="images/car1.jpg" class="d-block  car_img" alt="...">
       </div>
       <div class="carousel-item blo_img">
-        <img src="images/Iron Man Wallpaper.jpg" class="d-block car_img " alt="...">
+        <img src="images/car2.jpg" class="d-block car_img " alt="...">
       </div>
       <div class="carousel-item blo_img">
-        <img src="images/lD6eNS6-space-star-background.jpg" class="d-block car_img" alt="...">
+        <img src="images/car3.jpg" class="d-block car_img" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
