--- a/boot3.html
+++ b/boot3.html
@@ -146,7 +146,7 @@
             <img src="images/logo.png" alt="" height="35px">
       
             <div>
-                <p>&copy Copyright | Tanmay Wani, Durgesh Vishwakarma</p>
+                <p>&copy 2024 Tanmay, Durgesh, Suvarna, Navyatha</p>
             </div>
       
             <div class="icons">
