food image added

--- a/project.html
+++ b/project.html
@@ -27,7 +27,7 @@
 
 
       <div id="iconsdiv bg-success ">
-        <a href=""><img src="/images/log-in.svg" alt="icon" width="40" height="20" class=""></a>
+        <a href="boot2.html"><img src="/images/log-in.svg" alt="icon" width="40" height="20" class=""></a>
         <a href=""><img src="/images/bell.svg" alt="icon" width="40" height="20" class=""></a>
         <a href=""><img src="/images/shopping-cart.svg" alt="icon" width="40" height="20" class=""></a>
 
@@ -242,7 +242,7 @@
       <!-- Product 1 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/rice/rice1.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
@@ -267,7 +267,7 @@
       <!-- Product 2 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/rice/rice2.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
@@ -292,7 +292,7 @@
       <!-- Product 3 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/rice/rice3.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
@@ -317,7 +317,7 @@
       <!-- Product 4 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/rice/rice4.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
@@ -348,10 +348,10 @@
       <!-- Product 1 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/burger/burger1.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
-            <span class="badge bg-success ">In Stock</span>
+            <span class="position-absolute top-0 mt-2 start-40 translate-middle badge rounded-pill bg-danger ">In Stock</span>
             <div class="d-flex justify-content-between align-content-center text-center mt-1">
               <h5 class="card-title">HP Laptop</h5>
               <p class="card-text fs-5">$500 <del>$799</del></p>
@@ -373,7 +373,7 @@
       <!-- Product 2 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/burger/burger2.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
@@ -398,7 +398,7 @@
       <!-- Product 3 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/burger/burger3.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
@@ -423,7 +423,7 @@
       <!-- Product 4 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/burger/burger4.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
@@ -454,7 +454,7 @@
       <!-- Product 1 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/samosa/samosa1.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
@@ -479,7 +479,7 @@
       <!-- Product 2 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/samosa/samosa2.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
@@ -504,7 +504,7 @@
       <!-- Product 3 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/samosa/samosa3.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
@@ -529,7 +529,7 @@
       <!-- Product 4 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/samosa/samosa5.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
@@ -561,7 +561,7 @@
       <!-- Product 1 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/dosa/dosa1.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
@@ -586,7 +586,7 @@
       <!-- Product 2 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/dosa/dosa2.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
@@ -611,7 +611,7 @@
       <!-- Product 3 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/dosa/dosa3.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
@@ -636,7 +636,7 @@
       <!-- Product 4 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/dosa/dosa5.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
@@ -667,7 +667,7 @@
       <!-- Product 1 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/idly/idly1.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
@@ -692,7 +692,7 @@
       <!-- Product 2 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/idly/idly3.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
@@ -717,7 +717,7 @@
       <!-- Product 3 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/idly/idly5.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
@@ -742,7 +742,7 @@
       <!-- Product 4 -->
       <div class="col-md-3">
         <div class="card">
-          <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg" class="card-img-top img-fit p-2"
+          <img src="https://foodish-api.com/images/idly/idly7.jpg" class="card-img-top img-fit p-2"
             alt="HP Laptop">
           <div class="card-body">
             <span class="badge bg-success ">In Stock</span>
